Prevent a quick flicker in the rotating title during initialization

--- a/css/_type.css
+++ b/css/_type.css
@@ -27,9 +27,6 @@ body {
   -webkit-font-smoothing: antialiased !important;
 }
 
-h1, h2 {
-  /*font-weight: normal;*/
-}
 
 h1 {
   font-size: 3rem;
